// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</View>
`;

exports[`2. lead one and one slice 1`] = `
<View>
  <View>
    <View>
      <View>
        <View>
          <View>
            <Text>
              ROYALS
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Prince Philip ‘could be prosecuted’ over car crash
          </Text>
          <ArticleFlags
            flags={
              Array [
                "NEW",
              ]
            }
          />
        </View>
        <View>
          <Image
            aspectRatio={1.7777777777777777}
            uri="https://img/someImage"
          />
        </View>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View>
        <View>
          <View>
            <Text>
              CYBER CRIME
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            GCHQ gives girls free cyber-classes to tackle gender gap
          </Text>
          <ArticleFlags
            flags={
              Array [
                "UPDATED",
              ]
            }
          />
          <Text>
            <Text>
              
              GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
            </Text>
            <Text>
               
              The intelligence
              ...
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. secondary one slice 1`] = `
<View>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</View>
`;

exports[`4. secondary four 1`] = `
<View>
  <View>
    <View>
      <View>
        <View>
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </View>
    <View />
    <View>
      <View>
        <View>
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
  <View>
    <View>
      <View>
        <View>
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </View>
    <View />
    <View>
      <View>
        <View>
          <Image
            aspectRatio={1.7777777777777777}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
          />
        </View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
